# streamlit-cookies-manager

./: pyproject.toml
streamlit_cookies_manager/: encrypted_cookie_manager.py
