[tool.poetry]
name = "streamlit-cookies-manager-custom"
version = "0.2.1"
description = "Access and save cookies from Streamlit with cache issue fixed"
authors = ["Tomasz Kontusz <tomasz.kontusz@gmail.com> and Pruthvi Shetty <mail@prutvishetty.com>"]
license = "Apache-2.0"

readme = "README.md"

include = [
    "streamlit_cookies_manager/build/**/*",
]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = ">=0.84"
cryptography = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
